# cpp

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
cmake/: define.cmake  function.cmake  pkg-config-template.pc.in
external_project/: CMakeLists.txt
external_project/googletest/: CMakeLists.txt
external_project/lcov/: CMakeLists.txt
external_project/lcov-to-cobertura-xml/: CMakeLists.txt
external_project/rabbit/: CMakeLists.txt
external_project/rapidjson/: CMakeLists.txt
src/: CMakeLists.txt
src/config/: CMakeLists.txt  CommonConfig.cpp  CommonConfig.h  Config.cpp  Config.h
src/config/test/: CommonConfigTest.cpp  test.h.in
src/design-pattern/: CMakeLists.txt  Singleton.h
src/design-pattern/test/: SingletonTest.cpp
src/file/: CMakeLists.txt  FileManager.cpp  FileManager.h
src/file/test/: FileManagerTest.cpp
src/json/: BoostJson.cpp  BoostJson.h  CMakeLists.txt  Json.cpp  Json.h  JsonFactory.cpp  JsonFactory.h  JsonManager.cpp  JsonManager.h  RabbitJson.cpp  RabbitJson.h  RapidjsonJson.cpp  RapidjsonJson.h
src/json/test/: BoostJsonTest.cpp  JsonFactoryTest.cpp  JsonManagerTest.cpp  RabbitJsonTest.cpp  RapidjsonJsonTest.cpp  json_info.h  test.h
src/log/: CMakeLists.txt  FileLog.cpp  FileLog.h
src/log/test/: FileLogTest.cpp  test.h.in
src/process/: CMakeLists.txt  ChildProcess.cpp  ChildProcess.h  EnvironmentVariable.cpp  EnvironmentVariable.h  ParentProcess.cpp  ParentProcess.h  Process.cpp  Process.h  Signal.cpp  Signal.h
src/process/test/: ChildProcessTest.cpp  EnvironmentVariableTest.cpp  ParentProcessTest.cpp  SignalTest.cpp  test.h.in
src/queue/: CMakeLists.txt  QueueManager.cpp  QueueManager.h  QueueManager.hpp
src/queue/test/: QueueManagerTest.cpp  main.cpp
src/socket/: CMakeLists.txt  DualIp.cpp  DualIp.h  SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h
src/socket/test/: DualIpTest.cpp  SocketClientTest.cpp  SocketServerTest.cpp
src/thread/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
src/thread/test/: ThreadPoolTest.cpp
src/util/: CMakeLists.txt  trim.cpp  trim.h  type_name.h
src/util/test/: main.cpp  trimTest.cpp  type_name_test.cpp
test_data/config/: common.config
